<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.epam.training.center</groupId>
  <artifactId>epam-test-auto-autumn-oct-2021</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <testng.configs.path>${project.build.testOutputDirectory}/com/epam/training/center/lesson04/</testng.configs.path>
    <suite.xml.name>${testng.configs.path}/lesson4.class.suite.xml</suite.xml.name>

    <checkstyle.version>8.42</checkstyle.version>
    <testng.version>7.4.0</testng.version>
    <lombok.version>1.18.20</lombok.version>
    <aspectj.version>1.9.5</aspectj.version>
    <allure.version>2.14.0</allure.version>
    <selenium-java.version>4.0.0</selenium-java.version>
    <assertj-core.version>3.21.0</assertj-core.version>
    <webdrivermanager.version>5.0.3</webdrivermanager.version>

    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
    <cucumber-java.version>7.0.0</cucumber-java.version>
  </properties>

  <profiles>
    <profile>
      <id>lesson01-all-calculator-test-suite</id>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/com/epam/training/center/lesson01/AllCalculatorTestSuite.xml</suite.xml.name>
      </properties>
    </profile>
    <profile>
      <id>lesson01-mult-sum-calculator-test-suite</id>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/com/epam/training/center/lesson01/MultSumCalculatorTestSuite.xml</suite.xml.name>
      </properties>
    </profile>
    <profile>
      <id>lesson01-subtract-calculator-test-suite</id>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/com/epam/training/center/lesson01/SubtractCalculatorTestSuite.xml</suite.xml.name>
      </properties>
    </profile>
    <profile>
      <id>lesson04</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/com/epam/training/center/lesson04/lesson4.class.suite.xml</suite.xml.name>
      </properties>
    </profile>
    <profile>
      <id>lesson05-java-pure</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/com/epam/training/center/lesson05/lesson5.pure.java.suite.xml</suite.xml.name>
      </properties>
    </profile>
    <profile>
      <id>lesson05-cucumber</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/com/epam/training/center/lesson05/lesson5.cucumber.suite.xml</suite.xml.name>
      </properties>
    </profile>
    <profile>
      <id>lesson06-selenium-grid</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/com/epam/training/center/lesson06/lesson06.selenium.grid.suite.xml</suite.xml.name>
      </properties>
    </profile>
  </profiles>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure.version}</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium-java.version}</version>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj-core.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>${webdrivermanager.version}</version>
    </dependency>

    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>${cucumber-java.version}</version>
    </dependency>

    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-testng</artifactId>
      <version>${cucumber-java.version}</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>
            https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
          </configLocation>
          <encoding>${project.build.sourceEncoding}</encoding>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <linkXRef>false</linkXRef>
        </configuration>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <argLine>
            --illegal-access=permit
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <suiteXmlFiles>
            <suiteXmlFile>${suite.xml.name}</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>2.10.0</version>
        <configuration>
          <reportVersion>${allure.version}</reportVersion>
        </configuration>

      </plugin>
    </plugins>
  </reporting>

</project>
